[tool.poetry]
name = "cipher_dlk2158"
version = "0.1.0"
description = "A package for the cipher function."
authors = ["Darci Kovacs"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
